--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div id="izquierda">
+    <main>
+        <div id="izquierda">
         <div id="figuraMorada">
         </div>
         <div id="telefono">
@@ -68,10 +69,11 @@
 
         </div>
     </div>
-    <div class="attribution">
+    </main
+    <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://github.com/Jank1510">Jehan Carlos Hurtado</a>.
-      </div>
+      </footer>
 </body>
 
 </html>
