--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
     </div>
     </main
-    <footer class="attribution">
+    <div role="footer" class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://github.com/Jank1510">Jehan Carlos Hurtado</a>.
-      </footer>
+     </div>
 </body>
 
 </html>
