--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
         </div>
     </div>
-    </main
-    <div role="footer" class="attribution">
+    </main>
+    <footer class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="https://github.com/Jank1510">Jehan Carlos Hurtado</a>.
-     </div>
+     </footer>
 </body>
 
 </html>
